--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@rive-app/canvas": "^2.30.4",
 		"drizzle-orm": "^0.40.0",
 		"lucide-svelte": "^0.536.0",
 		"mysql2": "^3.12.0"
