--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"mode-watcher": "^1.1.0",
 		"playwright": "^1.53.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^2.1.0",
 		"tailwindcss": "^4.0.0",
@@ -62,7 +64,9 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@rive-app/canvas": "^2.30.4",
 		"drizzle-orm": "^0.40.0",
+		"gsap": "^3.13.0",
 		"lucide-svelte": "^0.536.0",
-		"mysql2": "^3.12.0"
+		"mysql2": "^3.12.0",
+		"nodemailer": "^7.0.5"
 	}
 }
