--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@rive-app/canvas": "^2.30.4",
 		"drizzle-orm": "^0.40.0",
-		"gsap": "^3.13.0",
+		"intl-tel-input": "^25.3.2",
 		"lucide-svelte": "^0.536.0",
 		"mysql2": "^3.12.0",
 		"nodemailer": "^7.0.5"
